# MVC_Example

./: CMakeLists.txt  UntitledProject2.qmlproject  UntitledProject2.qmlproject.qtds  main.cpp
Controller/: controller.h
Model/: model.h  modelExample.puml
UntitledProject2/: Constants.qml
UntitledProject2Content/: App.qml  My_item.qml
